--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@noble/hashes": "^2.0.1",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@vercel/analytics": "^1.5.0",
     "browser-image-compression": "^2.0.2",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
