--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ffmpeg/util": "^0.12.2",
     "@hookform/resolvers": "^5.2.2",
     "@noble/hashes": "^2.0.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@vercel/analytics": "^1.5.0",
@@ -21,6 +22,7 @@
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "diff": "^8.0.2",
     "exifr": "^7.1.3",
