feat(random-picker): add 3D dice, CSS coin flip, and spin-wheel integration
- Integrate spin-wheel library for canvas-based wheel animation
- Add @3d-dice/dice-box for 3D physics dice (d6/d20)
- Add CSS 3D coin flip with heads/tails animation
- Add Web Audio API sound effects for all modes
- Fix coin flip to show correct result after animation
- Fix dice unmount error when switching modes
- Add TypeScript declarations for spin-wheel and dice-box

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tool:validate": "bun scripts/validate-tools.ts"
   },
   "dependencies": {
+    "@3d-dice/dice-box": "^1.1.4",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
     "@hello-pangea/dnd": "^18.0.1",
@@ -51,6 +52,7 @@
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
+    "spin-wheel": "^5.0.2",
     "tailwind-merge": "^3.4.0",
     "tesseract.js": "^6.0.1",
     "zod": "^3.25.76"
